--- a/themes/wilma/css/ie7.css
+++ b/themes/wilma/css/ie7.css
@@ -9,3 +9,11 @@
 #login-form p.submit {
     margin-left: 20px;
 }
+/* Fix for site admin */
+/* the wonders of the IE float model...fix to maintain sanity in rendering sections of site admin */
+/* targets IE7 and below */
+#adminDashboard .pageBodyGroup {
+  *float: none !important;
+  *display: inline !important;
+  *vertical-align: top !important;
+}
